# bravo-shop

./: main.py  pyproject.toml
backend/: .gitignore  pyproject.toml
